--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "ejs": "^3.1.6",
@@ -18,7 +19,9 @@
     "mongodb": "^3.0.10",
     "mongoose": "^5.1.5",
     "nodemon": "^2.0.12",
-    "socket.io": "^2.1.1"
+    "pdfkit": "^0.12.3",
+    "socket.io": "^2.1.1",
+    "xlsx": "^0.17.2"
   },
   "devDependencies": {
     "expect": "^23.0.1"
