--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A kahoot website clone",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/server.js"
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
