--- a/package.json
+++ b/package.json
@@ -1,65 +1,25 @@
 {
-  "name": "tutorhub",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@kenshooui/react-multi-select": "^1.1.6",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.7",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
-    "material-ui-rating": "^4.0.0-beta.2",
-    "mdbreact": "^5.1.0",
-    "range": "^0.0.3",
-    "rangeslider-js": "^3.2.5",
-    "rating": "^0.1.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.2",
-    "react-landing-page": "^2.0.2",
-    "react-router-dom": "^5.1.0",
-    "react-scripts": "^4.0.3",
-    "rebass": "^4.0.7",
-    "slider": "^1.0.4",
-    "stars-rating": "^1.1.0",
-    "start": "^5.1.0",
-    "styled-components": "^5.3.3",
-    "tachyons": "^4.12.0",
-    "ui-box": "^5.0.0",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "name": "tutorhub-server",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon start index.js"
+  },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.14"
+  },
+  "devDependencies": {
+    "bcrypt": "^5.0.1",
+    "nodemailer": "^6.7.0"
+  }
 }
